--- a/index.html
+++ b/index.html
@@ -1,166 +1,204 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Pesan Spesial</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Pesan Spesial</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      font-family: 'Segoe UI', sans-serif;
-    }
+<style>
+body{
+  margin:0;
+  min-height:100vh;
+  font-family:'Poppins',sans-serif;
+  background:linear-gradient(-45deg,#ff9a9e,#fad0c4,#fbc2eb,#a6c1ee);
+  background-size:400% 400%;
+  animation:gradientMove 12s ease infinite;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow:hidden;
+}
 
-    .card-box {
-      background: white;
-      border-radius: 24px;
-      padding: 40px;
-      max-width: 500px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-      z-index: 2;
-      position: relative;
-    }
+@keyframes gradientMove{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
 
-    .hidden { display: none; }
+.card-box{
+  background:rgba(255,255,255,.85);
+  backdrop-filter:blur(12px);
+  border-radius:28px;
+  padding:40px;
+  max-width:520px;
+  width:90%;
+  text-align:center;
+  box-shadow:0 20px 50px rgba(0,0,0,.25);
+  z-index:2;
+}
 
-    .heart {
-      font-size: 3rem;
-      animation: pulse 1.5s infinite;
-    }
+.hidden{display:none}
 
-    .love {
-      position: fixed;
-      top: -20px;
-      font-size: 20px;
-      animation: fall linear forwards;
-      z-index: 1;
-      opacity: 0.8;
-    }
+.heart{
+  font-size:3.5rem;
+  animation:pulse 1.4s infinite;
+  text-shadow:0 0 15px rgba(255,0,80,.6);
+}
 
-    @keyframes fall {
-      to { transform: translateY(110vh); opacity: 0; }
-    }
+@keyframes pulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.2)}
+  100%{transform:scale(1)}
+}
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-      100% { transform: scale(1); }
-    }
+/* LOVE FALL */
+.love{
+  position:fixed;
+  top:-20px;
+  font-size:20px;
+  animation:fall linear forwards;
+  opacity:.8;
+  z-index:1;
+}
+@keyframes fall{
+  to{transform:translateY(110vh);opacity:0}
+}
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+/* FLASH */
+.flash{
+  position:fixed;
+  inset:0;
+  background:white;
+  opacity:0;
+  z-index:5;
+  pointer-events:none;
+}
 
-    .fade-in { animation: fadeIn 1s ease forwards; }
+/* ===== CUPID ===== */
+.cupid{
+  position:fixed;
+  top:-10px;
+  left:50%;
+  transform:translateX(-50%);
+  z-index:4;
+  transform-origin:top center;
+  animation:swing 3s ease-in-out infinite;
+}
 
-    .flash {
-      position: fixed;
-      inset: 0;
-      background: white;
-      opacity: 0;
-      z-index: 5;
-      pointer-events: none;
-    }
-  </style>
+.rope{
+  width:3px;
+  height:80px;
+  background:rgba(255,255,255,.7);
+  margin:auto;
+  border-radius:10px;
+}
+
+.angel{
+  font-size:3.2rem;
+  filter:drop-shadow(0 5px 10px rgba(0,0,0,.3));
+}
+
+@keyframes swing{
+  0%{transform:translateX(-50%) rotate(-6deg)}
+  50%{transform:translateX(-50%) rotate(6deg)}
+  100%{transform:translateX(-50%) rotate(-6deg)}
+}
+</style>
 </head>
+
 <body>
 
-  <div id="flash" class="flash"></div>
+<div id="flash" class="flash"></div>
 
-  <!-- COVER -->
-  <div id="cover" class="card-box">
-    <h2>💌</h2>
-    <p class="text-muted">Ada pesan kecil buat Safa</p>
-    <button class="btn btn-danger mt-3" onclick="openMessage()">
-      Buka Pesan
-    </button>
+<!-- CUPID -->
+<div class="cupid hidden" id="cupid">
+  <div class="rope"></div>
+  <div class="angel">👼🏹</div>
+</div>
+
+<!-- COVER -->
+<div id="cover" class="card-box">
+  <h2>💌</h2>
+  <p class="text-muted">Ada pesan kecil buat Safa</p>
+  <button class="btn btn-danger mt-3" onclick="openMessage()">Buka Pesan</button>
+</div>
+
+<!-- CONTENT -->
+<div id="content" class="card-box hidden">
+  <p class="text-muted">Hai Safa ✨</p>
+  <h2 class="fw-bold">Naufal</h2>
+  <div class="heart my-3">❤️</div>
+  <h2 class="fw-bold">Safa</h2>
+
+  <div class="mt-4 fst-italic">
+    <p>
+      Pulang sore naik TransJakarta,<br>
+      Naufal lanjut naik kereta.<br>
+      Bukan cuma soal pulang bareng aja,<br>
+      Sebenarnya Naufal suka sama Safa 😄
+    </p>
   </div>
 
-  <!-- ISI -->
-  <div id="content" class="card-box hidden">
-    <p class="text-muted">Hai Safa ✨</p>
+  <a href="https://wa.me/6285717847048?text=Hehe%20pantunnya%20receh%20😄"
+     target="_blank"
+     class="btn btn-outline-danger mt-4">
+     Senyum dong 😊
+  </a>
+</div>
 
-    <h2 class="fw-bold">Naufal</h2>
-    <div class="heart my-3">❤️</div>
-    <h2 class="fw-bold">Safa</h2>
+<audio id="thunderSound">
+  <source src="https://cdn.pixabay.com/audio/2021/08/04/audio_7d6e8f6b38.mp3">
+</audio>
 
-    <div class="mt-4 fst-italic">
-      <p>
-        Pulang sore naik TransJakarta,<br>
-        Naufal lanjut naik kereta.<br>
-        Bukan cuma soal pulang bareng aja,<br>
-        Sebenarnya Naufal suka sama Safa 😄
-      </p>
-    </div>
+<script>
+function createLove(){
+  const love=document.createElement("div");
+  love.className="love";
+  love.innerText=Math.random()>0.5?"❤️":"💗";
+  love.style.left=Math.random()*100+"vw";
+  love.style.fontSize=(16+Math.random()*24)+"px";
+  love.style.animationDuration=(3+Math.random()*3)+"s";
+  document.body.appendChild(love);
+  setTimeout(()=>love.remove(),6000);
+}
+let loveInterval=setInterval(createLove,800);
 
-    <a
-      href="https://wa.me/6285717847048?text=Hehe%20pantunnya%20receh%20😄%20Tapi%20serius%2C%20aku%20suka%20sama%20kamu%20🙂"
-      target="_blank"
-      class="btn btn-outline-danger mt-4"
-    >
-      Senyum dong 😊
-    </a>
-  </div>
+function flashPetir(){
+  const f=document.getElementById("flash");
+  f.style.opacity="1";
+  setTimeout(()=>f.style.opacity="0",120);
+}
 
-  <!-- AUDIO PETIR (STABIL) -->
-  <audio id="thunderSound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2021/08/04/audio_7d6e8f6b38.mp3" type="audio/mpeg">
-  </audio>
+function cupidLove(){
+  const h=document.createElement("div");
+  h.innerText="💘";
+  h.style.position="fixed";
+  h.style.top="90px";
+  h.style.left="50%";
+  h.style.transform="translateX(-50%)";
+  h.style.fontSize="24px";
+  h.style.animation="fall 3s linear forwards";
+  document.body.appendChild(h);
+  setTimeout(()=>h.remove(),3000);
+}
 
-  <script>
-    function createLove() {
-      const love = document.createElement("div");
-      love.className = "love";
-      love.innerText = Math.random() > 0.5 ? "❤️" : "💗";
-      love.style.left = Math.random() * 100 + "vw";
-      love.style.animationDuration = (3 + Math.random() * 3) + "s";
-      document.body.appendChild(love);
-      setTimeout(() => love.remove(), 6000);
-    }
+function openMessage(){
+  document.getElementById("cover").classList.add("hidden");
+  document.getElementById("content").classList.remove("hidden");
+  document.getElementById("cupid").classList.remove("hidden");
 
-    let loveInterval = setInterval(createLove, 800);
+  flashPetir();
+  clearInterval(loveInterval);
+  loveInterval=setInterval(createLove,300);
+  setInterval(cupidLove,4000);
 
-    function flashPetir() {
-      const flash = document.getElementById("flash");
-      flash.style.opacity = "1";
-      setTimeout(() => flash.style.opacity = "0", 120);
-    }
-
-    function openMessage() {
-      document.getElementById("cover").classList.add("hidden");
-
-      const content = document.getElementById("content");
-      content.classList.remove("hidden");
-      content.classList.add("fade-in");
-
-      const audio = document.getElementById("thunderSound");
-      audio.muted = false;
-      audio.volume = 1;
-      audio.currentTime = 0;
-
-      audio.play().catch(err => {
-        console.log("Audio blocked:", err);
-        alert("Klik sekali lagi ya 😄 (browser minta izin suara)");
-      });
-
-      flashPetir();
-
-      clearInterval(loveInterval);
-      loveInterval = setInterval(createLove, 300);
-    }
-  </script>
+  const audio=document.getElementById("thunderSound");
+  audio.play().catch(()=>{});
+}
+</script>
 
 </body>
 </html>
