--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@ body{
   100%{transform:scale(1)}
 }
 
-/* LOVE FALL */
 .love{
   position:fixed;
   top:-20px;
@@ -76,7 +75,7 @@ body{
   pointer-events:none;
 }
 
-/* ===== CUPID KIRI & KANAN ===== */
+/* CUPID */
 .cupid{
   position:fixed;
   top:10px;
@@ -84,7 +83,6 @@ body{
   transform-origin:top center;
   animation:swing 3s ease-in-out infinite;
 }
-
 .cupid.left{ left:30px; }
 .cupid.right{ right:30px; }
 
@@ -124,26 +122,22 @@ body{
 
 <div id="flash" class="flash"></div>
 
-<!-- CUPID KIRI -->
 <div class="cupid left hidden" id="cupidLeft">
   <div class="rope"></div>
   <div class="angel">👼🏹</div>
 </div>
 
-<!-- CUPID KANAN -->
 <div class="cupid right hidden" id="cupidRight">
   <div class="rope"></div>
   <div class="angel">👼🏹</div>
 </div>
 
-<!-- COVER -->
 <div id="cover" class="card-box">
   <h2>💌</h2>
   <p class="text-muted">Ada pesan kecil buat Safa</p>
   <button class="btn btn-danger mt-3" onclick="openMessage()">Buka Pesan</button>
 </div>
 
-<!-- CONTENT -->
 <div id="content" class="card-box hidden">
   <p class="text-muted">Hai Safa ✨</p>
   <h2 class="fw-bold">Naufal</h2>
@@ -162,11 +156,10 @@ body{
   <a href="https://wa.me/6285717847048"
      target="_blank"
      class="btn btn-outline-danger mt-4">
-     Senyum dong 😊
+     Klik link ini untuk balas perasaan ku
   </a>
 </div>
 
-<!-- FOOTER -->
 <div class="footer">
   Powered by <strong>Naufal Gozhi</strong>
 </div>
