--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ body{
   background-size:400% 400%;
   animation:gradientMove 12s ease infinite;
   display:flex;
-  justify-content:center;
+  flex-direction:column;
+  justify-content:flex-start;
   align-items:center;
-  overflow:hidden;
+  overflow-x:hidden;
+  padding-bottom:120px;
 }
 
 @keyframes gradientMove{
@@ -38,6 +40,7 @@ body{
   text-align:center;
   box-shadow:0 20px 50px rgba(0,0,0,.25);
   z-index:2;
+  margin-top:20px;
 }
 
 .hidden{display:none}
@@ -62,6 +65,22 @@ body{
   opacity:.8;
   z-index:1;
 }
+
+.fire-love{
+  text-shadow:
+    0 0 5px #ff77aa,
+    0 0 10px #ff3388,
+    0 0 15px #ff0055,
+    0 0 20px #ff0011;
+  animation: firePulse 1.2s infinite alternate;
+}
+
+@keyframes firePulse{
+  0%{ transform: scale(1) rotate(-10deg); opacity:0.8; }
+  50%{ transform: scale(1.2) rotate(10deg); opacity:1; }
+  100%{ transform: scale(1) rotate(-10deg); opacity:0.8; }
+}
+
 @keyframes fall{
   to{transform:translateY(110vh);opacity:0}
 }
@@ -115,6 +134,21 @@ body{
   color:rgba(255,255,255,.85);
   z-index:3;
 }
+
+/* KOMENTAR */
+#commentSection{
+  margin-top:30px;
+  text-align:left;
+}
+#commentSection h5{
+  margin-bottom:15px;
+}
+.comment-item{
+  background:rgba(255,255,255,.7);
+  padding:10px 15px;
+  border-radius:12px;
+  margin-bottom:10px;
+}
 </style>
 </head>
 
@@ -141,7 +175,7 @@ body{
 <div id="content" class="card-box hidden">
   <p class="text-muted">Hai Safa ✨</p>
   <h2 class="fw-bold">Naufal</h2>
-  <div class="heart my-3">❤️</div>
+  <div class="heart my-3 fire-love">💖</div>
   <h2 class="fw-bold">Safa</h2>
 
   <div class="mt-4 fst-italic">
@@ -158,6 +192,22 @@ body{
      class="btn btn-outline-danger mt-4">
      Klik link ini untuk balas perasaan ku
   </a>
+
+  <!-- KOMENTAR -->
+  <div id="commentSection">
+    <h5>Ucapan / Komentar</h5>
+    <form id="commentForm">
+      <div class="mb-2">
+        <input type="text" class="form-control" id="nameInput" placeholder="Nama" required>
+      </div>
+      <div class="mb-2">
+        <textarea class="form-control" id="commentInput" rows="2" placeholder="Komen" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary btn-sm">Kirim</button>
+    </form>
+    <div id="commentsList" class="mt-3"></div>
+  </div>
+
 </div>
 
 <div class="footer">
@@ -171,10 +221,10 @@ body{
 <script>
 function createLove(){
   const love=document.createElement("div");
-  love.className="love";
-  love.innerText=Math.random()>0.5?"❤️":"💗";
+  love.className="love fire-love"; // love berapi
+  love.innerText=Math.random()>0.5?"💖":"💘";
   love.style.left=Math.random()*100+"vw";
-  love.style.fontSize=(16+Math.random()*24)+"px";
+  love.style.fontSize=(20+Math.random()*24)+"px";
   love.style.animationDuration=(3+Math.random()*3)+"s";
   document.body.appendChild(love);
   setTimeout(()=>love.remove(),6000);
@@ -213,6 +263,24 @@ function openMessage(){
   const audio=document.getElementById("thunderSound");
   audio.play().catch(()=>{});
 }
+
+// ======= KOMENTAR =======
+const commentForm=document.getElementById("commentForm");
+const commentsList=document.getElementById("commentsList");
+
+commentForm.addEventListener("submit", function(e){
+  e.preventDefault();
+  const name=document.getElementById("nameInput").value.trim();
+  const comment=document.getElementById("commentInput").value.trim();
+  if(name && comment){
+    const div=document.createElement("div");
+    div.className="comment-item";
+    div.innerHTML=`<strong>${name}</strong>: ${comment}`;
+    commentsList.appendChild(div);
+    commentForm.reset();
+    div.scrollIntoView({behavior:"smooth"});
+  }
+});
 </script>
 
 </body>
