--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Pesan Spesial 💘</title>
+<title>Pesan Spesial 💌</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -41,16 +40,42 @@ body{
   box-shadow:0 20px 50px rgba(0,0,0,.25);
   z-index:2;
   margin-top:20px;
-  transform-origin: top;
-  transition: transform 0.8s ease, opacity 0.8s ease;
-}
-
-.card-box.open {
-  transform: rotateX(-90deg) scaleY(0);
-  opacity:0;
+  position:relative;
 }
 
 .hidden{display:none}
+
+#cover{
+  perspective:800px;
+}
+
+.flap{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:50%;
+  background:#fff;
+  border-top-left-radius:20px;
+  border-top-right-radius:20px;
+  transform-origin: top;
+  transition: transform 0.8s ease;
+  box-shadow:0 5px 15px rgba(0,0,0,.2);
+  z-index:3;
+}
+
+#cover.open .flap{
+  transform: rotateX(-150deg);
+}
+
+.letter{
+  opacity:0;
+  transition: opacity 0.6s ease 0.8s;
+}
+
+#cover.open .letter{
+  opacity:1;
+}
 
 .heart{
   font-size:3.5rem;
@@ -168,9 +193,12 @@ body{
 </div>
 
 <div id="cover" class="card-box">
-  <h2>💌</h2>
-  <p class="text-muted">Ada pesan kecil buat Safa</p>
-  <button class="btn btn-danger mt-3" onclick="openMessage()">Buka Pesan</button>
+  <div class="flap"></div>
+  <div class="letter">
+    <h2>💌</h2>
+    <p class="text-muted">Ada pesan kecil buat Safa</p>
+    <button class="btn btn-danger mt-3" onclick="openMessage()">Buka Pesan</button>
+  </div>
 </div>
 
 <div id="content" class="card-box hidden">
@@ -253,7 +281,7 @@ document.getElementById("mainLove").addEventListener("click",function(e){
 });
 
 function openMessage(){
-  const cover = document.getElementById("cover");
+  const cover=document.getElementById("cover");
   cover.classList.add("open");
 
   setTimeout(()=>{
